# fluvio-ex

./: .gitignore  CHANGELOG.md  README.md  coveralls.json  mix.exs
.github/workflows/: unit_tests.yml
examples/: admin.exs  consumer.exs  consumer_smartmodule.exs  ping_pong.exs  producer.exs
examples/wasm/: filter_even_length.wasm  map_reverse.wasm
lib/: fluvio.ex
lib/fluvio/: admin.ex  consumer.ex  native.ex  producer.ex  record.ex  topic.ex
native/fluvio_ex/: Cargo.toml  README.md
native/fluvio_ex/src/: admin.rs  atom.rs  client.rs  consumer.rs  lib.rs  producer.rs
test/: admin_test.exs  consumer_test.exs  fluvio_test.exs  producer_test.exs  test_helper.exs
