[package]
name = "fluvio_ex"
version = "0.2.3"
authors = []
edition = "2021"

[lib]
name = "fluvio_ex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.30.0", features = ["nif_version_2_16"] }
fluvio = "0.21.4"
async-std = "1.9"
futures-util = "0.3.30"
fluvio-types = "0.4.4"
fluvio-spu-schema = "0.14.5"
flate2 = "1.0.25"
fluvio-compression = "0.3.2"
