[package]
name = "fluvio_ex"
version = "0.2.3"
authors = []
edition = "2024"

[lib]
name = "fluvio_ex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37.0", features = ["nif_version_2_16"]}
fluvio = "0.50.1"
async-std = "1.13.2"
futures-util = "0.3.31"
fluvio-types = "0.50.1"
fluvio-spu-schema = "0.50.1"
flate2 = "1.1.5"
fluvio-compression = "0.50.1"
